  Xinerama setup with differently sized monitors (Bug #3097). (Jasper)
- Fix loading internal plugins if a similar file exists in the start directory
  (Bug #3279). (Nick)
- Only update the clock once a minute when seconds are disabled. The
  digital clock is also set in the default layout to minimize the amount
  of screen updates. (Nick)

4.4.1
=====
- Completely hide the right-click menu when kiosk mode is enabled (Bug #2984). (Nick)
- Show the system tray border in the default layout and increase the top panel
  size to 30px, so users can actually see the system tray. (Nick)
- Allow freely movable panels on the screen edges (bug #3039). (Nick)
- Improve the icon size of the actions plugin and add an option to change the
  orientation of the buttons (Bug #2999). (Nick)
- Unhide when dragging over the panel (Bug #2914). (Jasper)
- Check for NULL pointers in DBG messages to prevent crashes on Solaris, based on 
  patch from William Bonnet (bug #2922). (Jasper)
- Add some checks for valid tree selection (Bug #2933). (Jasper)
- Many translation updates. (Xfce Translation Team)

4.4.0
=====
- Many fixes when using the panel in a multiscreen setup (Jasper, Nick)
- Update or add blinking for urgent windows in taslist, windowlist and iconbox. 
  (Jasper)
- Move test plugin to Xfce Goodies. (Nick)
- Several fixes for (re)sizing and positioning behavior. (Jasper)
- Lots of small fixes and polish. (Jasper, Nick, Olivier, Benedikt)
- Update manual. (Jasper)
- Many translation updates. (Xfce Translation Team)


4.3.99.2 (4.4-RC2)
==================
- Adjust the plugin system to improve support for other platforms 
  (read: windows). (Jasper, Olivier)
- Many small fixes. (Jasper, Nick, Olivier, Jean-Francois)
- Translation updates. (Xfce Translation Team)


4.3.99.1 (4.4-RC1)
==================
- Add helper utility to open windowlist, useful for keyboard shortcuts.
  Patch by Darren Salt. (Jasper)
- Create dummy scripts for obsolete xftaskbar4 and xfce4-iconbox.