@@ -11,6 +11,7 @@ NEWS for xfce4-panel
 - Only update the clock once a minute when seconds are disabled. The
   digital clock is also set in the default layout to minimize the amount
   of screen updates. (Nick)
+- Fix possible buffer overflow in launcher tooltips (bug #3324). (Jasper)
 
 4.4.1
 =====
